# zuti-helper

./: Cargo.toml  README.md  run-as-debian-service.sh  upload_zfs_utils.sh  zuti-helper.service
debian/: changelog  control  postinst  postrm  preinst  prerm  rules  zuti-helper.service
scripts/: count-code.sh
src/: main.rs  models.rs
src/config/: consts.rs  logger.rs  mod.rs
